objects/Users_Login_History__c.object
<CustomObject>
    <description>Salesforce users login History Report</description>
    <fields>
        <fullName>Analytic_Snapshot_Name__c</fullName>
        <label>Analytic Snapshot Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytic_Snapshot_Running_User__c</fullName>
        <label>Analytic Snapshot Running User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsertDateTime__c</fullName>
        <label>InsertDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastLoginDate__c</fullName>
        <label>LastLoginDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoginDateTime__c</fullName>
        <label>LoginDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <formula>MONTH( DATEVALUE(NOW() )) - MONTH(  DATEVALUE( LoginDateTime__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users_Login_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Users Login History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Analytic_Snapshot_Name__c</columns>
        <columns>Client_Type__c</columns>
        <columns>InsertDateTime__c</columns>
        <columns>LoginDateTime__c</columns>
        <columns>LastLoginDate__c</columns>
        <columns>Username__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Analytic_Snapshot_Name__c</columns>
        <columns>Client_Type__c</columns>
        <columns>InsertDateTime__c</columns>
        <columns>LoginDateTime__c</columns>
        <columns>LastLoginDate__c</columns>
        <columns>Username__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ULH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Login History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>